--- a/src/styles.scss
+++ b/src/styles.scss
@@ -61,8 +61,9 @@ footer {
   }
 }
 
-@media screen and (max-width:768px){
-  footer, header {
-    display: none;;
+@media screen and (max-width: 768px) {
+  footer,
+  header {
+    display: none;
   }
 }
