--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,7 +1,7 @@
 .count-down-timer {
   box-shadow: 2px 6px 9px 2px rgb(0 0 0 / 20%);
   text-align: center;
-  background-color: #313b3f;
+  background-color: #0c1020;
   max-width: 400px;
   margin: 20px auto;
   color: #d9a74a;
